<resources>
    <string name="app_name">keibo</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

<!--  setting  -->
    <string name="swi_all_label">通知</string>
    <string name="swi_alarm_1_label">定期固定支出通知</string>
    <string name="swi_alarm_2_label">家計簿記入要請通知</string>
    <string name="swi_alarm_3_label">月末支出比較通知</string>

    <string name="total">合計</string>
    <string name="income">収入</string>
    <string name="expense">支出</string>
    <string name="sunday">日</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
</resources>