<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/home_previous_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/left_arrow"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/calendar_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="99月"
            android:textSize="40dp"/>
        <ImageButton
            android:id="@+id/home_next_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/right_arrow"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            style="@style/WeekName"
            android:text="@string/sunday"
            android:textColor="#FF0000"
            />
        <TextView
            style="@style/WeekName"
            android:text="@string/monday"/>
        <TextView
            style="@style/WeekName"
            android:text="@string/tuesday"/>
        <TextView
            style="@style/WeekName"
            android:text="@string/wednesday"/>
        <TextView
            style="@style/WeekName"
            android:text="@string/thursday"/>
        <TextView
            style="@style/WeekName"
            android:text="@string/friday"/>
        <TextView
            style="@style/WeekName"
            android:text="@string/saturday"
            android:textColor="#0000FF"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        />
</LinearLayout>