<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".frament.SettingsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/setting_fragment_main_margin_top"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/cl_fix_expense_noti"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed"
                >

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swi_all_label"
                    android:textSize="@dimen/setting_fragment_main_title_text_size"

                    android:layout_marginHorizontal="@dimen/setting_fragment_main_margin_horizontal"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/swi_all"

                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    />

                <Switch
                    android:id="@+id/swi_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginHorizontal="@dimen/setting_fragment_main_margin_horizontal"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_title"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_fix_expense_noti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/setting_fragment_main_margin_top"

                app:layout_constraintTop_toBottomOf="@+id/cl_title"
                app:layout_constraintBottom_toTopOf="@+id/cl_kinyu_noti"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintVertical_chainStyle="packed"

                >

                <TextView
                    android:id="@+id/tv_fix_expense_noti_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swi_alarm_1_label"
                    android:textSize="@dimen/setting_fragment_sub_title_text_size"

                    android:layout_marginHorizontal="@dimen/setting_fragment_main_margin_horizontal"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/swi_fix_expense_noti"

                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    />

                <Switch
                    android:id="@+id/swi_fix_expense_noti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginHorizontal="@dimen/setting_fragment_main_margin_horizontal"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_fix_expense_noti_title"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_kinyu_noti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/setting_fragment_main_margin_top"

                app:layout_constraintTop_toBottomOf="@+id/cl_fix_expense_noti"
                app:layout_constraintBottom_toTopOf="@+id/cl_comparison_noti"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintVertical_chainStyle="packed"

                >

                <TextView
                    android:id="@+id/tv_kinyu_noti_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swi_alarm_2_label"

                    android:textSize="@dimen/setting_fragment_sub_title_text_size"

                    android:layout_marginHorizontal="@dimen/setting_fragment_main_margin_horizontal"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/swi_kinyu_noti"

                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    />

                <Switch
                    android:id="@+id/swi_kinyu_noti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginHorizontal="@dimen/setting_fragment_main_margin_horizontal"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_kinyu_noti_title"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_comparison_noti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/setting_fragment_main_margin_top"

                app:layout_constraintTop_toBottomOf="@+id/cl_kinyu_noti"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintVertical_chainStyle="packed"

                >

                <TextView
                    android:id="@+id/tv_comparison_noti_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swi_alarm_3_label"
                    android:textSize="@dimen/setting_fragment_sub_title_text_size"

                    android:layout_marginHorizontal="@dimen/setting_fragment_main_margin_horizontal"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/swi_comparison_noti"

                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    />

                <Switch
                    android:id="@+id/swi_comparison_noti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginHorizontal="@dimen/setting_fragment_main_margin_horizontal"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_comparison_noti_title"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@+id/cl_comparison_noti"
                app:layout_constraintBottom_toBottomOf="parent"
                >

                <Button
                    android:id="@+id/btn_auto_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="毎月固定支出自動追加"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/btn_kinyu_noti"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <Button
                    android:id="@+id/btn_kinyu_noti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="記入要請"
                    app:layout_constraintTop_toBottomOf="@+id/btn_auto_add"
                    app:layout_constraintBottom_toTopOf="@+id/btn_comparison_noti"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <Button
                    android:id="@+id/btn_comparison_noti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="支出比較"
                    app:layout_constraintTop_toBottomOf="@+id/btn_kinyu_noti"
                    app:layout_constraintBottom_toTopOf="@+id/btn_fix_expense_noti"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <Button
                    android:id="@+id/btn_fix_expense_noti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="固定支出通知"
                    app:layout_constraintTop_toBottomOf="@+id/btn_comparison_noti"
                    app:layout_constraintBottom_toTopOf="@+id/btn_kawase"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <Button
                    android:id="@+id/btn_kawase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="為替レート確認"
                    app:layout_constraintTop_toBottomOf="@+id/btn_fix_expense_noti"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Licenseについて"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintVertical_bias="1"
                android:layout_marginBottom="15dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>